Apply the Refaster suggestions reported by CI